Bug 692268 - pdfwrite sets xapMM:DocumentID incorrectly
Summary: pdfwrite sets xapMM:DocumentID incorrectly
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: All All
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-09 15:49 UTC by Ken Sharp
Modified: 2011-11-25 04:28 UTC (History)
0 users

See Also:
Customer: 670
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2011-06-09 15:49:15 UTC
When writing a PDF/A-1b (possibly also at other times) pdfwrite emits a xapMM:DocumentID in the XML metadata.

This is specified to be a URI, but we emit it as a straight UUID, the hex string should be prefixed with 'uuid:'
Comment 1 Ken Sharp 2011-06-09 15:49:45 UTC
Add customer ID. Up priority to P2