(pdfwrite) Bug #692268 "pdfwrite sets xapMM:DocumentID incorrectly"

The XML emission in pdfwrite was simply pasting the UUID as a hex string,
whereas the spec says it must be a URI.

This change adds the 'uri:' which is required for compliance.
No cluster differences expected.