gs/base/gdevpdfe.c
@@ -525,13 +525,16 @@ pdf_make_instance_uuid(gx_device_pdf *pdev, const byte digest[6], char *buf, int
 static int
 pdf_make_document_uuid(gx_device_pdf *pdev, const byte digest[6], char *buf, int buf_length)
 {
-    if (pdev->DocumentUUID.size) {
-        int l = min(buf_length - 1, pdev->DocumentUUID.size);
+    char URI_prefix[5] = "uuid:";
 
-        memcpy(buf, pdev->DocumentUUID.data, l);
+    memcpy(buf, URI_prefix, 5);
+    if (pdev->DocumentUUID.size) {
+        int l = min(buf_length - 6, pdev->DocumentUUID.size);
+
+        memcpy(buf+5, pdev->DocumentUUID.data, l);
         buf[l] = 0;
     } else
-        pdf_make_uuid(digest, pdf_uuid_time(pdev), pdev->DocumentTimeSeq, buf, buf_length);
+        pdf_make_uuid(digest, pdf_uuid_time(pdev), pdev->DocumentTimeSeq, buf+5, buf_length - 5);
     return 0;
 }
 
